# ComfyUI-CNP-CropAndPaste

./: AGENTS.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
nodes/: crop_and_paste_nodes.py
