[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-dpnodes"
description = "DP Nodes - Custom nodes for ComfyUI"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0",
    "numpy",
    "pillow",
    "comfyui-custom-nodes>=1.0.0",
]

[project.urls]
Repository = "https://github.com/yourusername/comfyui-dpnodes"
Issues = "https://github.com/yourusername/comfyui-dpnodes/issues"

[tool.setuptools]
packages = ["dpnodes"]

[tool.setuptools.package-dir]
dpnodes = "."
