[project]
name = "comfyui-cnp-cropandpaste"
description = "Crop and Paste custom nodes for ComfyUI — crop images to mask bboxes and paste them back with alpha blending"
version = "0.1.0"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/dapa5900/ComfyUI-CNP-CropAndPaste"

[tool.comfy]
PublisherId = ""
DisplayName = "CNP Crop And Paste"
Icon = ""
